issue-00: create json converter

--- a/src/main/webapp/WEB-INF/template/login.html
+++ b/src/main/webapp/WEB-INF/template/login.html
@@ -11,17 +11,20 @@
 
       <p th:if="${param.error}" class="error">Invalid user, password, or domain</p>
       <p>
-        <label for="username" class="sr-only">Username</label>
+        <label th:text="#{label_login}" for="username" class="sr-only">Username</label>
         <input type="text" id="username" name="username" class="form-control"
-               placeholder="Username" required autofocus/>
+               th:placeholder="#{label_login}" required autofocus/>
       </p>
 
       <p>
-        <label for="password" class="sr-only">Password</label>
+        <label th:text="#{label_password}" for="password" class="sr-only">Password</label>
         <input type="password" id="password" name="password" class="form-control"
-               placeholder="Password" required autofocus/>
+               th:placeholder="#{label_password}" required autofocus/>
       </p>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button><br/>
+      <button th:text="#{label_sing_in}" class="btn btn-lg btn-primary btn-block" type="submit">Sign
+        in
+      </button>
+      <br/>
       <p><a href="/" th:href="@{/}">Back to home page</a></p>
     </form>
   </div>
