--- a/src/main/webapp/WEB-INF/template/welcome.html
+++ b/src/main/webapp/WEB-INF/template/welcome.html
@@ -7,7 +7,6 @@
   <div class="container">
 
 
-
     <div class="page-wrap d-flex flex-row align-items-center">
       <div class="container">
         <div class="row justify-content-center">
@@ -15,10 +14,30 @@
             <span class="display-1 d-block">Banking</span>
             <div class="mb-4 lead">
 
-              <p>Welcome to start page</p>
+              <div th:if="${not #lists.isEmpty(rate)}">
+                <div th:text="${#dates.format(#dates.createNow(), 'dd MM yyyy')}"></div>
+                <table class="table table-striped">
+                  <thead>
+                  <tr>
+                    <th th:text="#{label_ccy}"></th>
+                    <th th:text="#{label_buy}"></th>
+                    <th th:text="#{label_sale}"></th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr th:each="rateList :${rate}">
+                    <td th:text="${rateList.ccy}"></td>
+                    <td th:text="${rateList.buy}"></td>
+                    <td th:text="${rateList.sale}"></td>
+                  </tr>
+                  </tbody>
+                </table>
+              </div>
+
+              <p th:text="#{label_welcome}">Welcome to start page</p>
 
             </div>
-            <a th:href="@{/login}" class="btn btn-link">sing in</a>
+            <a th:href="@{/login}" class="btn btn-link" th:text="#{label_sing_in}">sing in</a>
           </div>
         </div>
       </div>
