--- a/src/main/webapp/WEB-INF/template/layout.html
+++ b/src/main/webapp/WEB-INF/template/layout.html
@@ -15,19 +15,27 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
+          aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto col-sm-3 col-md-3">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" th:href="@{/?lang=us}">English <span
+            class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" th:href="@{/?lang=ru}">Russia <span class="sr-only">(current)</span></a>
       </li>
 
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <button class="btn btn-secondary my-2 my-sm-0" type="button" data-toggle="modal" data-target="#loginModal">Login</button>
+      <button th:text="#{label_login}" class="btn btn-secondary my-2 my-sm-0" type="button"
+              data-toggle="modal"
+              data-target="#loginModal">Login
+      </button>
     </form>
   </div>
 </nav>
@@ -46,28 +54,30 @@
         <form class="form-signin" th:action="@{/login}" method="post">
 
           <div class="form-label-group">
-            <label for="inputEmail">User Name</label>
-            <input type="text" id="inputEmail" name="username" class="form-control" placeholder="enter name" required autofocus>
+            <label th:text="#{label_login}" for="inputEmail">User Name</label>
+            <input th:text="#{label_login}" type="text" id="inputEmail" name="username" class="form-control"
+                   th:placeholder="#{label_login}" required autofocus>
           </div>
 
           <div class="form-label-group">
-            <label for="inputPassword">Password</label>
-            <input type="text" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
+            <label th:text="#{label_password}" for="inputPassword">Password</label>
+            <input th:text="#{label_password}" type="text" id="inputPassword" name="password" class="form-control"
+                   th:placeholder="#{label_password}" required autofocus>
           </div>
 
           <div class="checkbox mb-3">
             <label>
-              <input  type="checkbox"  value="remember-me"> Remember me
+              <input th:text="#{label_remember}" type="checkbox" value="remember-me">
             </label>
           </div>
-          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+          <button th:text="#{label_sing_in}" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
           <p class="mt-5 mb-3 text-muted text-center">© 2018-2019</p>
         </form>
 
       </div>
       <div class="modal-footer">
-        <button type="reset" class="btn btn-primary">Reset</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button th:text="#{label_reset}" type="reset" class="btn btn-primary">Reset</button>
+        <button th:text="#{label_close}" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
