--- a/src/main/webapp/WEB-INF/template/admin.html
+++ b/src/main/webapp/WEB-INF/template/admin.html
@@ -1,61 +1,45 @@
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns="http://www.w3.org/1999/xhtml"
       th:include="layout :: page">
 
 
 <body>
-<div th:fragment="content">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-5 text-right">
-        <h1 th:text="'Hello ' + ${name}"></h1>
-        <div sec:authentication="principal.authorities">name</div>
-      </div>
-      <div class="col-md-3 text-right">
-        <h1><a th:href="@{/logout}">log out</a></h1>
-      </div>
-    </div>
+<div th:fragment="admin">
 
-    <button id="json-example" type="button" class="btn btn-primary" data-toggle="modal"
-            data-target="#exampleModal"
-            data-whatever="@mdo">get json
-    </button>
-
-    <div th:if="${message}" class="alert alert-success" role="alert">
-      <h1 th:text="${message}">delete success</h1>
-    </div>
-
-
-    <div sec:authorize="hasRole('ADMIN')" th:if="${not #lists.isEmpty(allDeal)}">
-      <table class="table table-striped">
-        <thead>
-        <tr>
-          <th th:text="#{label_deal_name}">name</th>
-          <th th:text="#{label_deal_type}">type</th>
-          <th th:text="#{label_deal_quantity}">quantity</th>
-          <th th:text="#{label_deal_amount}">amount</th>
-          <th th:text="#{label_deal_create_date}">create date</th>
-          <th th:text="#{label_deal_active_closed}">active</th>
-          <th>delete</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="trade: ${allDeal}">
-          <td th:text="${trade.name}"></td>
-          <td th:text="${trade.type}"></td>
-          <td th:text="${trade.quantity}"></td>
-          <td th:text="${trade.amount}"></td>
-          <td th:text="${#dates.format(#dates.createNow(), 'dd MM yyyy HH:mm')}">create date
-          </td>
-          <td th:if="${trade.active}" th:text="#{label_deal_active}">
-          <td th:unless="${trade.active}" th:text="#{label_deal_closed}">
-          <td><a th:href="@{/admin/delete/{id} (id=${trade.id}) }">delete</a></td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-
+  <div th:if="${message}" class="alert alert-success" role="alert">
+    <h1 th:text="${message}">delete success</h1>
   </div>
+
+
+  <div th:if="${not #lists.isEmpty(allDeal)}">
+    <table class="table table-striped">
+      <thead>
+      <tr>
+        <th th:text="#{label_deal_name}">name</th>
+        <th th:text="#{label_deal_type}">type</th>
+        <th th:text="#{label_deal_quantity}">quantity</th>
+        <th th:text="#{label_deal_amount}">amount</th>
+        <th th:text="#{label_deal_create_date}">create date</th>
+        <th th:text="#{label_deal_active_closed}">active</th>
+        <th>delete</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="trade: ${allDeal}">
+        <td th:text="${trade.name}"></td>
+        <td th:text="${trade.type}"></td>
+        <td th:text="${trade.quantity}"></td>
+        <td th:text="${trade.amount}"></td>
+        <td th:text="${#dates.format(#dates.createNow(), 'dd MM yyyy HH:mm')}">create date
+        </td>
+        <td th:if="${trade.active}" th:text="#{label_deal_active}">
+        <td th:unless="${trade.active}" th:text="#{label_deal_closed}">
+        <td><a th:href="@{/admin/delete/{id} (id=${trade.id}) }">delete</a></td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+
 </div>
 
 
