--- a/src/main/webapp/WEB-INF/template/layout.html
+++ b/src/main/webapp/WEB-INF/template/layout.html
@@ -98,14 +98,13 @@
 
 <div class="row">
   <div class="col-lg-1"></div>
-  <div class="col-lg-6">
-    <div sec:authorize="hasRole('ADMIN')" th:include="~{admin :: admin}"></div>
-    <div sec:authorize="hasRole('USER')" th:include="~{user :: content}"></div>
-    <div sec:authorize="isAnonymous()" th:include="~{login :: content}"></div>
-  </div>
-  <div class="col-lg-3">
-    <div th:include="~{topic::topic}"></div>
-  </div>
+  <div sec:authorize="hasRole('ADMIN')" class="col-lg-6" th:insert="~{this::admin}"></div>
+  <div sec:authorize="hasRole('USER')" class="col-lg-6" th:insert="~{user :: content}"></div>
+  <div sec:authorize="isAnonymous()" class="col-lg-6" th:include="~{login :: login}"></div>
+</div>
+<div class="col-lg-3">
+  <div th:include="~{topic::topic}"></div>
+</div>
 
 </div>
 
