--- a/src/main/webapp/WEB-INF/template/login.html
+++ b/src/main/webapp/WEB-INF/template/login.html
@@ -3,30 +3,33 @@
       th:include="layout :: page">
 
 <body>
-<div th:fragment="content">
+<div th:fragment="login">
   <div class="container">
 
-    <form class="form-signin" th:action="@{/login}" method="post">
-      <h2 class="form-signin-heading">Please sign in</h2>
+    <div class="col-lg-4">
+      <form class="form-signin" th:action="@{/login}" method="post">
+        <h2 class="form-signin-heading">Please sign in</h2>
 
-      <p th:if="${param.error}" class="error">Invalid user, password, or domain</p>
-      <p>
-        <label th:text="#{label_login}" for="username" class="sr-only">Username</label>
-        <input type="text" id="username" name="username" class="form-control"
-               th:placeholder="#{label_login}" required autofocus/>
-      </p>
+        <p th:if="${param.error}" class="error">Invalid user, password, or domain</p>
+        <p>
+          <label th:text="#{label_login}" for="username" class="sr-only">Username</label>
+          <input type="text" id="username" name="username" class="form-control"
+                 th:placeholder="#{label_login}" required autofocus/>
+        </p>
 
-      <p>
-        <label th:text="#{label_password}" for="password" class="sr-only">Password</label>
-        <input type="password" id="password" name="password" class="form-control"
-               th:placeholder="#{label_password}" required autofocus/>
-      </p>
-      <button th:text="#{label_sing_in}" class="btn btn-lg btn-primary btn-block" type="submit">Sign
-        in
-      </button>
-      <br/>
-      <p><a href="/" th:href="@{/}">Back to home page</a></p>
-    </form>
+        <p>
+          <label th:text="#{label_password}" for="password" class="sr-only">Password</label>
+          <input type="password" id="password" name="password" class="form-control"
+                 th:placeholder="#{label_password}" required autofocus/>
+        </p>
+        <button th:text="#{label_sing_in}" class="btn btn-lg btn-primary btn-block" type="submit">
+          Sign
+          in
+        </button>
+        <br/>
+        <p><a href="/" th:href="@{/}">Back to home page</a></p>
+      </form>
+    </div>
   </div>
 </div>
 </body>
