--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -1,15 +1,22 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
+.id {
+  font-family: Lato;
+  font-size: 30px;
+}
+
 body {
   background: aqua;
 }
+
 .page-wrap {
   min-height: 100vh;
 }
 
-
-footer{
+footer {
   background-color: #333;
   height: 10vh;
-  color:#fff;
+  color: #fff;
   padding: 0;
   text-align: center;
   position: absolute;
